[project]
name = "anyforce"
version = "0.43.0"
description = ""
authors = [
    {name = "exherb", email = "i@4leaf.me"},
]
dependencies = [
    "uvicorn[standard]>=0.30.3",
    "pydantic[email]>2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "tortoise-orm>0.20.0",
    "orjson>=3.10.6",
    "aiohttp[speedups]>=3.9.5",
    "starlette-context>=0.3.6",
    "itsdangerous>=2.2.0",
    "python-dateutil>=2.9.0.post0",
    "rq>=1.16.2",
    "uvloop>=0.19.0",
    "PyYAML>=6.0.1",
    "fastapi>=0.111.1",
    "pydantic-settings>=2.3.4",
    "structlog>=25.1.0",
]
requires-python = ">=3.11"
license = {text = "COPYRIGHT"}

[project.urls]
homepage = "https://github.com/42signal/anyforce"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
includes = [
    "anyforce/**/*.py",
    "anyforce/py.typed",
    "README.md",
]
[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.aliyun.com/pypi/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "flake8==7.1.0",
    "isort==5.13.2",
    "black==24.4.2",
    "pytest==8.3.1",
    "typer==0.12.3",
    "pytest-asyncio==0.23.8",
    "Faker==26.0.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "twine==5.1.1",
]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
