[project]
name = "anyforce"
version = "0.44.6"
description = ""
authors = [
    {name = "exherb", email = "i@4leaf.me"},
]
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]>=0.30.3",
    "pydantic[email]>2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "tortoise-orm>=0.25.0",
    "orjson>=3.10.6",
    "aiohttp[speedups]>=3.9.5",
    "starlette-context>=0.3.6",
    "itsdangerous>=2.2.0",
    "python-dateutil>=2.9.0.post0",
    "rq>=1.16.2",
    "uvloop>=0.19.0",
    "PyYAML>=6.0.1",
    "fastapi>=0.111.1",
    "pydantic-settings>=2.3.4",
    "structlog>=25.1.0",
]
[dependency-groups]
dev = [
    "pytest==8.4.1",
    "typer==0.16.0",
    "pytest-asyncio==0.23.8",
    "Faker==37.4.0",
    "pytest-cov==6.2.1",
    "httpx==0.28.1",
    "twine==5.1.1",
    "ruff>=0.11.6",
]

[project.urls]
homepage = "https://github.com/42signal/anyforce"

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.setuptools]
package-dir = {"anyforce" = "anyforce"}

[tool.pyright]
typeCheckingMode = "strict"
stubPath = "./typings"
reportIncompatibleVariableOverride = "none"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
